--- a/style.css
+++ b/style.css
@@ -1,35 +1,22 @@
-.logo-top {
-    display: grid;
-    align-items: center; 
-    grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 5px;
-   }
-   
-   img {
-     max-width: 100%;
-     max-height:100%;
-   }
-   
-   .text {
-     font-size: 70px;
-   }
+* {
+    padding: 1px;
+}
+.error {color: #ff0000;}
 
-   .footer {
+footer {
     position: fixed;
-    left: 0;
     bottom: 0;
-    width: 100%;
-    background-color: #576C4D;
-    color: white;
+    width: 100vw;
     text-align: center;
-    font-style: italic;
- }
- 
- table {
+    background-color: #AABAAB;
+}
+
+table {
     width: 100%;
+    padding: 10px;
 }
 
 table, td, th {
-    border: 2px solid #000000;
-    border-spacing: 0;
+    border: 10px solid #000000;
+    border-spacing: 2px;
 }
